One more small fix for menu text cutoff

--- a/client/src/components/menu.scss
+++ b/client/src/components/menu.scss
@@ -16,7 +16,6 @@
 
 .menu_subMenu {
     max-height: 0;
-    overflow: hidden;
     transition: max-height 0.8s;
 }
 
